--- a/PotionCraftRecipeWaypoints.csproj
+++ b/PotionCraftRecipeWaypoints.csproj
@@ -22,6 +22,9 @@
   </ItemGroup>
   
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>lib\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="PotionCraft.Core">
       <HintPath>lib\PotionCraft.Core.dll</HintPath>
     </Reference>
@@ -43,5 +46,9 @@
     <Reference Include="UnityEngine.UI">
       <HintPath>lib\UnityEngine.UI.dll</HintPath>
     </Reference>
+  </ItemGroup>
+  
+  <ItemGroup>
+    <Folder Include="Thunderstore\plugins\" />
   </ItemGroup>
 </Project>
