--- a/Thunderstore/manifest.json
+++ b/Thunderstore/manifest.json
@@ -1,8 +1,8 @@
 ﻿{
   "name": "Recipe_Waypoints",
-  "version_number": "0.5.2",
+  "version_number": "1.0.0",
   "website_url": "https://github.com/AndrewFahlgren/PotionCraftRecipeWaypoints",
-  "description": "A mod to show waypoints on the map for unfinished recipes. Only compatible with Potion Craft beta v0.5.0.",
+  "description": "A mod to show waypoints on the map for unfinished recipes. Compatible with Potion Craft v1.0.",
   "dependencies": [
     "BepInEx-BepInExPack_PotionCraft-5.4.18"
   ]
