Updated recipe waypoints to work with Potion Craft v2.0

--- a/PotionCraftRecipeWaypoints.csproj
+++ b/PotionCraftRecipeWaypoints.csproj
@@ -31,6 +31,9 @@
     <Reference Include="PotionCraft.GamepadNavigation">
       <HintPath>lib\PotionCraft.GamepadNavigation.dll</HintPath>
     </Reference>
+    <Reference Include="PotionCraft.SceneLoader">
+      <HintPath>lib\PotionCraft.SceneLoader.dll</HintPath>
+    </Reference>
     <Reference Include="PotionCraft.Scripts">
       <HintPath>lib\PotionCraft.Scripts.dll</HintPath>
     </Reference>
