Fixed readme issue

--- a/.gitignore
+++ b/.gitignore
@@ -364,3 +364,4 @@ FodyWeavers.xsd
 /lib
 /Thunderstore/plugins
 /Thunderstore/Recipe Waypoints_1.0.5.1.zip
+/Thunderstore/RecipeWaypoints_2.0.0.0.zip
